# fbref-scrapy

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
app/: database.py  main.py  models.py  scraper.py
